:bug: page overflow

--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .Sidebar-root {
   background-color: darkgray;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .Sidebar-container {
